Add read-only browser authentication with SAML
